# blank

./: .gitignore  Makefile.am  README.md  autogen.sh  common.am  configure.ac
data/: Makefile.am  blank.desktop.in  blank.gresource.xml  gtk-style.css
data/ui/: Makefile.am  toolbar.ui
m4/: blank.m4
src/: Makefile.am  blank-application-controller.vala  blank-application-model.vala  blank-application-view.vala  blank-application.vala  blank-cli-application-view.vala  blank-cli-application.vala  blank-main.vala  blank-ui-application-view.vala  blank-ui-application.vala  blank-utility.vala  resources.c
vapi/: Makefile.am  config.vapi
